# apk

./: bitrise.yml
.github/workflows/: build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ep2pc/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/ep2pc/core/: MessageCodec.kt  NativeBridge.kt  ProtoWire.kt  Settings.kt
android/app/src/main/java/com/ep2pc/service/: BootReceiver.kt  Ep2pcService.kt  KeystoreKeys.kt
android/app/src/main/java/com/ep2pc/ui/: ChatViewModel.kt  Ep2pcApp.kt  QrCodec.kt
android/app/src/main/java/com/ep2pc/ui/theme/: Theme.kt
android/app/src/main/jniLibs/: README.txt
android/app/src/main/res/drawable/: ic_launcher.xml  ic_stat_ep2pc.xml
android/app/src/main/res/values/: strings.xml  themes.xml
core/: Cargo.toml
core/crypto/: Cargo.toml
core/crypto/src/: aead.rs  error.rs  identity.rs  kdf.rs  lib.rs  ratchet.rs  x3dh.rs
core/engine/: Cargo.toml
core/engine/src/: lib.rs
core/ffi/: Cargo.toml
core/ffi/src/: lib.rs
core/group/: Cargo.toml
core/group/src/: lib.rs
core/groupmgr/: Cargo.toml
core/groupmgr/src/: lib.rs
core/media/: Cargo.toml
core/media/src/: lib.rs
core/net/: Cargo.toml
core/net/src/: command.rs  event.rs  lib.rs
core/peerid/: Cargo.toml
core/peerid/src/: lib.rs
core/proto/: Cargo.toml
core/proto/proto/: ep2pc.proto
core/proto/src/: lib.rs
core/saf/: Cargo.toml
core/saf/src/: lib.rs
core/storage/: Cargo.toml
core/storage/src/: lib.rs
docs/: EP2PC-SAS-v0.1.md
