[package]
name = "ep2pc-crypto"
version = "0.1.0"
edition = "2021"
description = "EP2PC cryptography core: identity, X3DH-lite handshake, Double Ratchet (EP2PC-004)"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
rand = "0.8"

