[package]
name = "ep2pc-ffi"
version = "0.1.0"
edition = "2021"
description = "JNI bridge exposing the EP2PC core to the Android/Kotlin layer (EP2PC-008 §8.4)"

[lib]
# cdylib -> produces libep2pc_ffi.so that Gradle bundles into the APK.
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"

ep2pc-crypto = { path = "../crypto" }
ep2pc-proto = { path = "../proto" }
ep2pc-engine = { path = "../engine" }
ep2pc-group = { path = "../group" }
ep2pc-groupmgr = { path = "../groupmgr" }
ep2pc-saf = { path = "../saf" }
ep2pc-net = { path = "../net" }
ep2pc-storage = { path = "../storage" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
