[package]
name = "ep2pc-groupmgr"
version = "0.1.0"
edition = "2021"
description = "Group orchestration: ties the group state machine (group) to 1:1 key delivery (engine) and message encryption (EP2PC-006 §6.4–6.8)"

[dependencies]
ep2pc-crypto = { path = "../crypto" }
ep2pc-engine = { path = "../engine" }
ep2pc-group = { path = "../group" }
ep2pc-proto = { path = "../proto" }
