[package]
name = "ep2pc-net"
version = "0.1.0"
edition = "2021"
description = "EP2PC networking: libp2p transport, DHT, gossipsub, NAT traversal (EP2PC-003)"

# NOTE: libp2p's API changes between minor versions; this crate is pinned to 0.54.x.
# Build with a current stable Rust toolchain (>= 1.83), which you install anyway for the
# Android cross-build (see repo README). The crypto/ and proto/ crates are verified on
# older toolchains; this crate targets the same modern toolchain as the Android build.

[dependencies]
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "identify",
    "mdns",
    "relay",
    "dcutr",
    "autonat",
    "ping",
    "request-response",
    "cbor",
    "macros",
    "quic",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
tracing = "0.1"
thiserror = "1"

ep2pc-proto = { path = "../proto" }
ep2pc-crypto = { path = "../crypto" }
ep2pc-saf = { path = "../saf" }
ep2pc-peerid = { path = "../peerid" }
serde = { version = "1", features = ["derive"] }
